<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
     tools:showIn="@layout/activity_my_profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/my_profile_bg">
        <ImageView
            android:id="@+id/img_my_profile_pic"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:elevation="5sp"
            android:src="@drawable/myprofilepic"/>
        <TextView
            android:id="@+id/txt_my_name"
            android:layout_marginTop="5sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/string_my_name"
            />
    </LinearLayout>
    <LinearLayout
         android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/layout_name" >



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="8sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/white"
            android:elevation="1sp"
            >
            <TextView
                 android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/string_track"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/white"
            android:elevation="1sp"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/string_Country"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/white"
            android:elevation="1sp"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/string_email"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/white"
            android:elevation="1sp"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/string_phone_number"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@android:color/white"
            android:elevation="1sp"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:text="@string/string_slack_name"
                />
        </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
 </RelativeLayout>